# job-search-2.0

./: .env.example  README.md  job_results.py  lama_format_test.py  main.py  people_results.json  pyproject.toml  tasks_factory.py
configs/: tasks.yml
models/: models.py
src/job_search/: main.py
src/job_search/demo/: find_people.py  get_cookies.py  lama_format_test.py
src/job_search/tools/: client.py  driver.py
